@@ -1,3 +1,5 @@
+MD-2008-04-28-0: Enhamcem.: o added new gettext marcos for installation changes
+
 CR-2008-04-22-0: Enhancem.: o get_resource_info():
                               added new parameter: sdmadm_output
                               Used to get output of sdmadm command
